--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,7 +2,7 @@
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
     "branches": [
         {
-            "branch": "develop",
+            "branch": "main",
             "handleGHRelease": true
         }
     ],
@@ -23,10 +23,6 @@
                 },
                 {
                     "path": "back/.env.version",
-                    "type": "generic"
-                },
-                {
-                    "path": "version.txt",
                     "type": "generic"
                 }
             ]
